# optee-pqc

./: .gitignore  LICENSE  README.md
host/: CMakeLists.txt  pqc_host.c
host/include/: pqc_host.h
scripts/: clean_all.sh  setup_host_env.sh
ta/: CMakeLists.txt  oqs_align.c  pqc_ta.c  pqc_ta.h  sub.mk  user_ta_header_defines.h
ta/include/: pqc_ta.h
